<resources>
    <string name="app_name">Carona Unifor</string>
    <string name="title_activity_maps">Map</string>
    <string name="titulo_cadastro">Cadastrar uma conta</string>
    <string name="tiulo_login">Acessar minha conta</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="nome">Nome</string>
    <string name="passageiro">Passageiro</string>
    <string name="motorista">Motorista</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="title_activity_passageiro">PassageiroActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_corrida">CorridaActivity</string>
    <string name="aceitar_carona">Aceitar Carona</string>
    <string name="chamar_carona">Chamar carona</string>
</resources>
